# WireSentinel-Cloud

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: error.rs  lib.rs  main.rs  middleware.rs  openapi.rs  routes.rs
api/tests/: integration.rs
auth/: Cargo.toml
auth/src/: jwt.rs  lib.rs  oidc.rs  provider.rs  saml.rs
billing/: Cargo.toml
billing/src/: lib.rs  payment.rs  subscription.rs
cloud-ai/: Cargo.toml
cloud-ai/src/: analytics.rs  fleet.rs  lib.rs  policy.rs
cloud-ai/tests/: fleet.rs
cloud-billing/: Cargo.toml
cloud-billing/src/: invoices.rs  lib.rs  manager.rs  plans.rs  stripe.rs
cloud-billing/tests/: plans.rs  stripe_webhook.rs
cloud-cnapp/: Cargo.toml
cloud-cnapp/src/: analytics.rs  fleet.rs  lib.rs  policy.rs
cloud-cnapp/tests/: fleet.rs
cloud-core/: Cargo.toml
cloud-core/src/: anonymity.rs  kernel.rs  lib.rs  metrics.rs  organization.rs  policy.rs  team.rs  tenant.rs
cloud-events/: Cargo.toml
cloud-events/src/: lib.rs
cloud-ha/: Cargo.toml
cloud-ha/src/: lib.rs
cloud-ha/tests/: ha.rs
cloud-logging/: Cargo.toml
cloud-logging/src/: lib.rs
cloud-logging/tests/: logs.rs
cloud-metering/: Cargo.toml
cloud-metering/src/: lib.rs
cloud-metering/tests/: metering.rs
cloud-observability/: Cargo.toml
cloud-observability/src/: exporters.rs  lib.rs  pipeline.rs
cloud-observability/tests/: pipeline.rs
cloud-provisioning/: Cargo.toml
cloud-provisioning/src/: lib.rs
cloud-provisioning/tests/: provision.rs
cloud-quotas/: Cargo.toml
cloud-quotas/src/: lib.rs
cloud-quotas/tests/: enforce.rs
cloud-recovery/: Cargo.toml
cloud-recovery/src/: lib.rs
cloud-recovery/tests/: recovery.rs
cloud-regions/: Cargo.toml
cloud-regions/src/: lib.rs
cloud-regions/tests/: regions.rs
cloud-sse/: Cargo.toml
cloud-sse/src/: analytics.rs  fleet.rs  lib.rs  policy.rs
cloud-sse/tests/: fleet.rs
cloud-storage/: Cargo.toml
cloud-storage/src/: lib.rs
cloud-storage/tests/: local_backup.rs
cloud-vpn-gateway-compat/: Cargo.toml
cloud-vpn-gateway-compat/src/: analytics.rs  fleet.rs  lib.rs  policy.rs
cloud-vpn-gateway-compat/tests/: fleet.rs
cloud-wiresock/src/: lib.rs  policy.rs
cloud-wiresock/tests/: fleet.rs
cloud-xdr/: Cargo.toml
cloud-xdr/src/: analytics.rs  fleet.rs  lib.rs  policy.rs
cloud-xdr/tests/: fleet.rs
cloud-ztna/: Cargo.toml
cloud-ztna/src/: fleet.rs  identity.rs  lib.rs  policy.rs  publisher.rs
cloud-ztna/tests/: fleet.rs
compliance/: Cargo.toml
compliance/src/: lib.rs
database/: Cargo.toml
database/migrations/: 001_init.sql  002_teams.sql  003_federation.sql  004_compliance.sql  005_kernel.sql  006_compliance_kernel_check.sql  007_anonymity.sql  008_compliance_anonymity_check.sql  009_billing.sql  009_billing_phase14.sql  010_plan_enterprise_plus.sql  011_provisioning.sql  012_metering_quotas.sql  013_regions_recovery.sql  014_ha_cluster.sql  015_storage_logs.sql  016_provisioning_jobs_alter.sql  017_ztna.sql  018_sse.sql  018_sse_phase16.sql  019_xdr.sql  020_cnapp.sql  021_ai_security.sql  021_ai_security_phase19.sql  022_vpn_gateway_compat.sql  022_wiresock_phase18_5.sql
database/src/: lib.rs  models.rs
docs/: saas-operations.md  sse-operations.md  stripe-setup.md  ztna-operations.md
federation/: Cargo.toml
federation/src/: lib.rs
sync/: Cargo.toml
sync/src/: lib.rs
web-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web-ui/src/: App.tsx  api.ts
web-ui/src/components/: Layout.tsx
web-ui/src/pages/: AccessPolicies.tsx  AiCompliance.tsx  AiDashboard.tsx  AiForecasting.tsx  AiInvestigations.tsx  AiReports.tsx  AiRiskCenter.tsx  AnonymityFleet.tsx  AnonymityPrivacyAnalytics.tsx  Billing.tsx  CasbAnalytics.tsx  CnappAttackPaths.tsx  CnappComplianceCenter.tsx  CnappDashboard.tsx  CnappMultiCloudAnalytics.tsx  CnappRiskCenter.tsx  CnappVulnerabilityCenter.tsx  Compliance.tsx  Controllers.tsx  Dashboard.tsx  DlpAnalytics.tsx  Federation.tsx  FederationMonitoring.tsx  Identity.tsx  KernelFleetOverview.tsx  KernelMonitoring.tsx  Login.tsx  Observability.tsx  Organizations.tsx  Quotas.tsx  Recovery.tsx  Regions.tsx  ResourcePublishing.tsx  RiskAnalytics.tsx  Subscriptions.tsx  Teams.tsx  Tenants.tsx  ThreatCenter.tsx  TrustAnalytics.tsx  UebaAnalytics.tsx  (+12 more)
