[workspace]
resolver = "2"
members = [
    "database",
    "cloud-core",
    "federation",
    "sync",
    "auth",
    "billing",
    "cloud-billing",
    "cloud-metering",
    "cloud-quotas",
    "cloud-provisioning",
    "cloud-regions",
    "cloud-recovery",
    "cloud-storage",
    "cloud-observability",
    "cloud-logging",
    "cloud-ha",
    "cloud-events",
    "cloud-ztna",
    "cloud-sse",
    "cloud-xdr",
    "cloud-cnapp",
    "cloud-ai",
    "cloud-wiresock",
    "compliance",
    "api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["WireSentinel Contributors"]
repository = "https://github.com/WireSentinel/WireSentinel-Cloud"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "any",
    "chrono",
    "uuid",
    "migrate",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"

database = { path = "database" }
cloud-core = { path = "cloud-core" }
federation = { path = "federation" }
sync = { path = "sync" }
auth = { path = "auth" }
billing = { path = "billing" }
cloud-billing = { path = "cloud-billing" }
cloud-metering = { path = "cloud-metering" }
cloud-quotas = { path = "cloud-quotas" }
cloud-provisioning = { path = "cloud-provisioning" }
cloud-regions = { path = "cloud-regions" }
cloud-recovery = { path = "cloud-recovery" }
cloud-storage = { path = "cloud-storage" }
cloud-events = { path = "cloud-events" }
cloud-ztna = { path = "cloud-ztna" }
cloud-sse = { path = "cloud-sse" }
cloud-xdr = { path = "cloud-xdr" }
cloud-cnapp = { path = "cloud-cnapp" }
cloud-ai = { path = "cloud-ai" }
cloud-wiresock = { path = "cloud-wiresock" }
cloud-ha = { path = "cloud-ha" }
cloud-logging = { path = "cloud-logging" }
cloud-observability = { path = "cloud-observability" }
compliance = { path = "compliance" }
