[package]
name = "cloud-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "cloud_api"
path = "src/lib.rs"

[[bin]]
name = "cloud-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
auth = { workspace = true }
axum.workspace = true
base64.workspace = true
billing = { workspace = true }
chrono.workspace = true
cloud-billing = { workspace = true }
cloud-core = { workspace = true }
cloud-events = { workspace = true }
cloud-ztna = { workspace = true }
cloud-sse = { workspace = true }
cloud-xdr = { workspace = true }
cloud-cnapp = { workspace = true }
cloud-ai = { workspace = true }
cloud-wiresock = { workspace = true }
cloud-metering = { workspace = true }
cloud-provisioning = { workspace = true }
cloud-quotas = { workspace = true }
cloud-ha = { workspace = true }
cloud-logging = { workspace = true }
cloud-observability = { workspace = true }
cloud-recovery = { workspace = true }
cloud-regions = { workspace = true }
cloud-storage = { workspace = true }
compliance = { workspace = true }
database = { workspace = true }
federation = { workspace = true }
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sync = { workspace = true }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
bcrypt.workspace = true
reqwest = { workspace = true, features = ["cookies"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
