[package]
name = "cloud-billing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
billing = { workspace = true }
chrono.workspace = true
cloud-core = { workspace = true }
database = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
default = []
stripe = ["dep:async-stripe"]

[dependencies.async-stripe]
package = "async-stripe"
version = "0.39"
optional = true
default-features = false
features = ["runtime-tokio-hyper", "checkout", "webhook-events"]

[dev-dependencies]
database = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
