[package]
name = "cloud-ha"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
cloud-events = { workspace = true }
database = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
database = { workspace = true }
tokio = { workspace = true }
sqlx.workspace = true
