[package]
name = "cloud-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
cloud-core = { workspace = true }
database = { workspace = true }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dependencies.opentelemetry]
version = "0.27"
optional = true

[dependencies.opentelemetry_sdk]
version = "0.27"
optional = true
features = ["rt-tokio"]

[dependencies.opentelemetry-otlp]
version = "0.27"
optional = true
features = ["grpc-tonic"]

[dev-dependencies]
database = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
sqlx.workspace = true
